--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Proch-N50
 author  = Andrea Telatin <andrea@telatin.com>
 license = MIT
 copyright_holder = Andrea Telatin
-copyright_year   = 2018-2020
+copyright_year   = 2018-2022
 
 [VersionFromModule]
 
@@ -35,7 +35,7 @@ Text::ASCIITable = 0.2
 [MetaProvides::Package]
 
 [MetaResources]
-repository.url = https://github.com/quadram-institute-bioscience/seqfu.git
+repository.url = https://github.com/telatin/proch-n50.git
 homepage       = https://metacpan.org/release/Proch-N50
 
 ;[Run::AfterBuild]
