--- a/dist.ini
+++ b/dist.ini
@@ -21,11 +21,13 @@ prune_directory = experimental
 perl = 5.012
 FASTX::Reader = 1.3.0
 Getopt::Long = 2.39
+Pod::Usage = 1.61
 
 [Prereqs]
 JSON::PP = 2.27
 Pod::Usage = 1.61
 Text::ASCIITable = 0
+
 
 [Prereqs / TestRecommends]
 Text::ASCIITable = 0.2
