--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,7 @@ Text::ASCIITable = 0
 
 [Prereqs / TestRecommends]
 Text::ASCIITable = 0.2
+Pod::Markdown = 3.300
 
 [PodWeaver]
 [MetaJSON]          ; generate META.json (v2)
@@ -40,5 +41,5 @@ Text::ASCIITable = 0.2
 repository.url = https://github.com/telatin/proch-n50.git
 homepage       = https://metacpan.org/release/Proch-N50
 
-;[Run::AfterBuild]
-;run = bash xt/n50_loc_lib.sh
+[Run::AfterBuild]
+run = bash xt/doc.sh
