--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,7 @@ Text::ASCIITable = 0
 [Prereqs / TestRecommends]
 Time::Out = 0
 IPC::Run = 0
+IPC::Cmd = 0
 Text::ASCIITable = 0.2
 Pod::Markdown = 3.300
 
