--- a/.github/workflows/ubuntu.yaml
+++ b/.github/workflows/ubuntu.yaml
@@ -28,4 +28,4 @@ jobs:
         run: |
           dzil authordeps --missing | cpanm --notest
           dzil listdeps --author --missing | cpanm --notest
-          dzil test --author --release --verbose
+          dzil test --verbose
